--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "sass": "^1.56.1",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
