--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
     "@types/node": "^16.18.4",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "@types/react-slick": "^0.23.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "sass": "^1.56.1",
-    "slick-carousel": "^1.8.1",
+    "swiper": "^8.4.5",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
